kubernetes_ori/bankapp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bankapp-ingress
  namespace: bankapp
  labels:
    name: bankapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  ingressClassName: nginx

  rules:
  - host: bankapp.rishindra.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bankapp-svc
            port:
              number: 8080
